Actually adjusted to not remove num. there is no rank. num is just there to make the point that these movies are the same one. think like id

--- a/DataMunging Project Data Cleaning.Rmd
+++ b/DataMunging Project Data Cleaning.Rmd
@@ -249,7 +249,7 @@ Any forms of truncation has been done using only the first three categories
 
 ```{r}
 ## removing useless columns (V1,Released, Plot, imdbID, Type, DVD, Website)
-movie.final <- select(movie, -c("V1", "Num","Released", "Plot", "imdbID", "Type", "DVD", "Website"))
+movie.final <- select(movie, -c("V1","Released", "Plot", "imdbID", "Type", "DVD", "Website"))
 
 ## Replace Writer, Actors, Awards
 movie.final$Writer <- writer.split3
